syntax = "proto2";

import "hourai/db/proto/cache.proto";

package hourai.db.proto;

// NEXT ID: 8
message MusicStateProto {
  optional int64 position = 6;
  repeated fixed64 skip_votes = 3;
  optional MusicQueueProto queue = 4;

  reserved 1, 2, 5, 7;
}

// NEXT ID: 2
message MusicQueueProto {
  repeated UserQueueProto user_queues = 1;
}

// NEXT ID: 3
message UserQueueProto {
  optional /* actually required */ uint64 user_id = 1;
  repeated TrackProto tracks = 2;
}

// NEXT ID: 8
message TrackProto {
  optional /* actually required */ CachedUserProto requestor = 1;
  optional string title = 2;
  optional string author = 3;
  optional /* actually required */ string uri = 4;
  optional /* actually required */ uint64 length = 5;
  optional /* actually required */ bool is_stream = 6;
  optional /* actually required */ bytes track_data = 7;
}
